--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,7 +12,10 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "types": "workspace:^"
+    "types": "workspace:^",
+    "shared": "workspace:^",
+    "api": "workspace:^",
+    "style": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^20",
