--- a/packages/shared/components.json
+++ b/packages/shared/components.json
@@ -5,13 +5,13 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "global.css",
+    "css": "styles/global.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "components",
-    "utils": "lib/utils"
+    "components": "src/components",
+    "utils": "src/lib/utils"
   }
 }
