--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "api": "workspace:^",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "types": "workspace:^",
     "shared": "workspace:^",
-    "api": "workspace:^"
+    "types": "workspace:^",
+    "tailwind-config": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
