--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shared",
+  "name": "tailwind-config",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "tailwind-config": "workspace:^"
-  }
+  "license": "ISC"
 }
