--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "shared": "workspace:^",
+    "tailwind-config": "workspace:^",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "types": "workspace:^"
