--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@storybook/react": "^8.1.6",
     "@tanstack/react-query": "^5.40.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
