Update common dependencies

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -10,11 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.394.0",
-    "tailwind-config": "workspace:^",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-config": "workspace:^"
   }
 }
