feat: eslint 설정 테스트 적용

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "shared": "workspace:^",
     "tailwind-config": "workspace:^",
+    "code-style-config": "workspace:^",
     "types": "workspace:^"
   },
   "devDependencies": {
