--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "pnpm --filter client",
     "admin": "pnpm --filter admin",
-    "storybook": "pnpm --filter storybook"
+    "storybook": "pnpm --filter storybook",
+    "lint": "pnpm --filter code-style-config"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "8.57.0",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@storybook/react": "^8.1.6",
     "@tanstack/react-query": "^5.40.1",
@@ -28,6 +32,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "prettier": "^3.2.5"
+  },
+  "peerDependencies": {
+    "prettier": ">= 3"
   }
 }
