--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.4",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "5.4.4"
   },
   "peerDependencies": {
     "prettier": ">= 3"
