--- a/packages/code-style-config/package.json
+++ b/packages/code-style-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-code-style",
+  "name": "eslint-config-custom",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
