--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "shared": "workspace:^",
+    "eslint-config-custom": "workspace:^",
     "tailwind-config": "workspace:^",
     "types": "workspace:^"
   },
@@ -25,5 +26,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "prettier": "eslint-config-custom/prettier"
 }
