--- a/packages/code-style-config/package.json
+++ b/packages/code-style-config/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
     "eslint-plugin-storybook": "0.8.0",
-    "eslint-plugin-testing-library": "6.2.0"
+    "eslint-plugin-testing-library": "6.2.0",
+    "eslint-plugin-sort-exports": "^0.8.0",
+    "eslint-plugin-unused-imports": "^2.0.0"
   },
   "peerDependencies": {
     "eslint": ">= 8",
