--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,11 +21,11 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "eslint-config-next": "14.2.3"
   },
   "prettier": "eslint-config-custom/prettier"
 }
