--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,17 +15,17 @@
     "react": "^18",
     "react-dom": "^18",
     "shared": "workspace:^",
-    "eslint-config-custom": "workspace:^",
     "tailwind-config": "workspace:^",
+    "eslint-config-custom": "workspace:^",
     "types": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.4",
+    "eslint-config-next": "14.2.3"
   },
   "prettier": "eslint-config-custom/prettier"
 }
