--- a/packages/code-style-config/package.json
+++ b/packages/code-style-config/package.json
@@ -28,6 +28,9 @@
     "eslint-plugin-sort-exports": "^0.8.0",
     "eslint-plugin-unused-imports": "^2.0.0"
   },
+  "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.6.5"
+  },
   "peerDependencies": {
     "eslint": ">= 8",
     "typescript": ">= 5"
