--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.7.0",
     "@radix-ui/react-slot": "^1.0.2",
     "api": "workspace:^",
     "eslint-config-custom": "workspace:^",
@@ -18,7 +19,8 @@
     "react-hook-form": "^7.52.0",
     "shared": "workspace:^",
     "tailwind-config": "workspace:^",
-    "types": "workspace:^"
+    "types": "workspace:^",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
