--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,21 +11,26 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "api": "workspace:^",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "eslint-config-custom": "workspace:^",
+    "lucide-react": "^0.394.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "shared": "workspace:^",
     "tailwind-config": "workspace:^",
-    "eslint-config-custom": "workspace:^",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "types": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "eslint": "^8",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "eslint-config-next": "14.2.3"
+    "tailwindcss": "^3.4.4"
   },
   "prettier": "eslint-config-custom/prettier"
 }
