feat: api workspace 의존성 추가

--- a/apps/storybook/tsconfig.json
+++ b/apps/storybook/tsconfig.json
@@ -18,7 +18,8 @@
       "@/*": ["./src/*"],
       "shared/*": ["../../packages/shared/src/*"],
       "client/*": ["../client/src/*"],
-      "admin/*": ["../admin/src/*"]
+      "admin/*": ["../admin/src/*"],
+      "api/*": ["../../packages/api/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
