--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-config": "workspace:^",
+    "api": "workspace:^",
     "shared": "workspace:^"
   },
   "devDependencies": {
