--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "shared/*": ["./src/*"]
+      "shared/*": ["./src/*"],
+      "api/*": ["../api/src/*"]
     }
   }
 }
