--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -19,7 +19,8 @@
     ],
     "paths": {
       "admin/*": ["./src/*"],
-      "shared/*": ["../../packages/shared/src/*"]
+      "shared/*": ["../../packages/shared/src/*"],
+      "api/*": ["../../packages/api/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
