--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -19,7 +19,9 @@
     ],
     "paths": {
       "client/*": ["./src/*"],
-      "shared/*": ["../../packages/shared/src/*"]
+      "shared/*": ["../../packages/shared/src/*"],
+      "api/*": ["../../packages/api/src/*"],
+      "types": ["../../packages/types/src"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
