--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "next": "14.2.3",
     "shared": "workspace:^"
   },
   "keywords": [],
