--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "types": "workspace:^",
   "keywords": [],
   "author": "",
   "license": "ISC"
