fix: build error 해결

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "next": "14.2.3",
-    "shared": "workspace:^"
+    "shared": "workspace:^",
+    "types": "workspace:^"
   },
   "keywords": [],
   "author": "",
