feat: useGetMy member, auth info hook 추가

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "next": "14.2.3",
-    "shared": "workspace:^"
+    "shared": "workspace:^",
+    "eslint-config-custom": "workspace:^"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "prettier": "eslint-config-custom/prettier"
 }
