--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "paths": {
       "api/*": ["./src/*"],
-      "types": ["../types/src"]
+      "types": ["../types/src"],
+      "shared/*": ["../shared/src/*"]
     }
   }
 }
