--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "paths": {
       "client/*": ["../../apps/client/src/*"],
-      "types": ["./src"]
+      "types/*": ["./src/*"]
     }
   }
 }
