--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,6 +15,7 @@
     "eslint-config-custom": "workspace:^",
     "next": "14.2.3",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "shared": "workspace:^",
