--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,6 +21,7 @@
     "api": "workspace:^",
     "eslint-config-custom": "workspace:^",
     "tailwind-config": "workspace:^",
+    "types": "workspace:^",
     "zod": "^3.23.8"
   },
   "devDependencies": {
