--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "types": "workspace:^"
+    "shared": "workspace:^",
+    "types": "workspace:^",
+    "zod": "^3.23.8"
   },
   "types": "workspace:^",
   "keywords": [],
