Add client package

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "paths": {
       "shared/*": ["./src/*"],
-      "api/*": ["../api/src/*"]
+      "api/*": ["../api/src/*"],
+      "client/*": ["../../apps/client/src/*"]
     }
   }
 }
