--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "api": "workspace:^",
+    "client": "workspace:^",
     "eslint-config-custom": "workspace:^",
     "tailwind-config": "workspace:^",
     "types": "workspace:^",
