--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,7 +22,9 @@
     "eslint-config-custom": "workspace:^",
     "tailwind-config": "workspace:^",
     "types": "workspace:^",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "next": "14.2.3",
+    "react-daum-postcode": "^3.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
