fix: 빌드 에러 해결

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "paths": {
       "shared/*": ["./src/*"],
-      "api/*": ["../api/src/*"]
+      "api/*": ["../api/src/*"],
+      "types/*": ["../types/src/*"]
     }
   }
 }
