--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "next": "14.2.3"
   },
   "devDependencies": {
     "prettier": "^3.3.2",
