fix: 의존성 제거

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "shared": "workspace:^",
-    "types": "workspace:^",
-    "zod": "^3.23.8"
+    "types": "workspace:^"
   },
   "types": "workspace:^",
   "keywords": [],
