--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,15 +13,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "api": "workspace:^",
     "eslint-config-custom": "workspace:^",
-    "next": "14.2.3",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "shared": "workspace:^",
     "tailwind-config": "workspace:^",
-    "types": "workspace:^",
-    "zod": "^3.23.8"
+    "types": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^20",
