--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,9 +20,11 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "api": "workspace:^",
     "eslint-config-custom": "workspace:^",
+    "react-daum-postcode": "^3.1.3",
     "tailwind-config": "workspace:^",
     "types": "workspace:^",
-    "react-daum-postcode": "^3.1.3"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "eslint": "^8",
