--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "lucide-react": "^0.394.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "next": "14.2.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prettier": "^3.3.2",
