--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,8 +23,7 @@
     "react-daum-postcode": "^3.1.3",
     "tailwind-config": "workspace:^",
     "types": "workspace:^",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
