--- a/packages/code-style-config/package.json
+++ b/packages/code-style-config/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cspell/eslint-plugin": "^8.17.2",
     "@rushstack/eslint-config": "3.6.8",
     "@rushstack/eslint-patch": "1.10.1",
     "@tanstack/eslint-plugin-query": "4.38.0",
@@ -23,9 +24,9 @@
     "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
+    "eslint-plugin-sort-exports": "^0.8.0",
     "eslint-plugin-storybook": "0.8.0",
     "eslint-plugin-testing-library": "6.2.0",
-    "eslint-plugin-sort-exports": "^0.8.0",
     "eslint-plugin-unused-imports": "^2.0.0"
   },
   "devDependencies": {
