--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +26,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "eslint": "^8",
     "eslint-config-next": "14.2.3"
   },
   "prettier": "eslint-config-custom/prettier"
