--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "pnpm --filter code-style-config",
     "test:admin": "pnpm jest --config apps/admin/jest.config.ts",
     "test:client": "pnpm jest --config apps/client/jest.config.ts",
-    "test:shared": "pnpm jest --config packages/shared/jest.config.ts"
+    "test:shared": "pnpm jest --config packages/shared/jest.config.ts",
+    "build": "pnpm client build && pnpm admin build && pnpm storybook build-storybook && pnpm api lint && pnpm shared lint && pnpm types lint"
   },
   "keywords": [],
   "author": "",
