feat : eslint-config-custom package 삭제후 root에 eslint, prettier 설정

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,12 +8,10 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
-    "eslint-config-custom": "workspace:^",
     "shared": "workspace:^",
     "types": "workspace:^"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "prettier": "eslint-config-custom/prettier"
+  "license": "ISC"
 }
