--- a/package.json
+++ b/package.json
@@ -25,12 +25,9 @@
     "@tanstack/react-query": "^5.40.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "7.5.0",
-    "@typescript-eslint/parser": "7.5.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "eslint": "8.57.0",
     "lucide-react": "^0.394.0",
     "next": "14.2.3",
     "react": "^18",
@@ -42,13 +39,31 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@cspell/eslint-plugin": "^8.17.2",
+    "@rushstack/eslint-config": "3.6.8",
+    "@rushstack/eslint-patch": "1.10.1",
+    "@tanstack/eslint-plugin-query": "4.38.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-no-relative-import-paths": "1.5.3",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-refresh": "0.4.6",
+    "eslint-plugin-sort-exports": "^0.8.0",
+    "eslint-plugin-testing-library": "6.2.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
