--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,14 +19,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "api": "workspace:^",
-    "eslint-config-custom": "workspace:^",
     "react-daum-postcode": "^3.1.3",
     "tailwind-config": "workspace:^",
     "types": "workspace:^",
     "zod": "^3.23.8"
   },
-  "devDependencies": {
-    "eslint-config-next": "14.2.3"
-  },
-  "prettier": "eslint-config-custom/prettier"
+  "devDependencies": {}
 }
